--- a/src/Styles/colors.scss
+++ b/src/Styles/colors.scss
@@ -4,7 +4,7 @@ $blue : #036DDF;
 $yellow : #F2B82F;
 $green : #00A67F;
 $purple : #56459E;
-$lightgrey : #F8F9F9;
+$lightgrey : #f1f1f1;
 $grey : #DADADA;
 $darkgrey : #A7A7A7;
 $box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
