--- a/src/Styles/main.scss
+++ b/src/Styles/main.scss
@@ -30,8 +30,15 @@ body{
 }
 main{
     width: 100%;
+    margin-left: 290px;
+    margin-right: 30px;
+    padding-top: 30px;
 }
 @import './components/button.scss';
 @import './components/smallcaptor.scss';
 @import './components/circularprogress.scss';
 @import './components/navbar.scss';
+@import './components/text.scss';
+@import './components/img.scss';
+@import './components/badgeData.scss';
+@import './components/form.scss';
