--- a/src/Styles/colors.scss
+++ b/src/Styles/colors.scss
@@ -7,6 +7,7 @@ $purple : #56459E;
 $lightgrey : #f1f1f1;
 $grey : #DADADA;
 $darkgrey : #A7A7A7;
+$darkblue : #000329;
 $box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 
 .danger{
