--- a/src/Styles/components/navbar.scss
+++ b/src/Styles/components/navbar.scss
@@ -46,3 +46,16 @@
         }
     }
 }
+
+.navbar_dark{
+    background-color: $darkblue;
+
+    
+    &>ul{
+        &>li{
+            &>a{
+                color: white;
+            }
+        }
+    }
+}
