--- a/src/Styles/colors.scss
+++ b/src/Styles/colors.scss
@@ -4,11 +4,11 @@ $blue : #036DDF;
 $yellow : #F2B82F;
 $green : #00A67F;
 $purple : #56459E;
-$lightgrey : #f1f1f1;
+$lightgrey : #f7f7f7;
 $grey : #DADADA;
 $darkgrey : #A7A7A7;
 $darkblue : #000329;
-$box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+$box-shadow: rgba(100, 100, 111, 0.1) 0px 7px 10px 0px;
 
 .danger{
     background-color: $red;
@@ -19,3 +19,11 @@ $box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 .success{
     background-color: $green;
 }
+
+$theme-colors: (
+    "info": $yellow,
+    "danger": $red,
+    "success": $green,
+    "primary": $blue,
+    "secondary" : $grey
+);
