--- a/src/Styles/components/circularprogress.scss
+++ b/src/Styles/components/circularprogress.scss
@@ -7,11 +7,12 @@
         left: 0;
     }
     &>div{
-
         position: absolute;
         left: 21px;
         top: 11px;
         text-align: center;
+        display: flex;
+        flex-direction: column;
         &>p{
             font-size: 24px;
             font-weight: bold;
@@ -20,7 +21,7 @@
 
         &>span{
             color: $darkgrey;
-            padding-top: -10px;
+            padding-bottom: -10px;
             font-size: 10px;
             font-weight: bold;
         }
