--- a/src/Styles/components/navbar.scss
+++ b/src/Styles/components/navbar.scss
@@ -6,20 +6,24 @@
     display: flex;
     flex-direction: column;
     position: fixed;
+    align-items: start;
 
     &>ul{
-        height: 70%;
+        height: 82%;
         padding: 0;
         &>li{
             list-style-type: none;
-            padding-top: 16px;
-            padding-bottom: 16px;
+            padding-top: 8px;
+            padding-bottom: 8px;
             padding-left: 34px;
             
             &>a{
                 text-decoration: none;
                 font-weight: bold;
                 color: black;
+                padding: 16px;
+                display: block;
+                width: 180px;
                 &>svg{
                     padding-right: 12px;
                 }
@@ -56,6 +60,14 @@
             &>a{
                 color: white;
             }
+
+            &>.active{
+                color: $red !important;
+            }
         }
     }
+}
+
+.active{
+    color: $blue !important;
 }
