--- a/src/Styles/components/smallcaptor.scss
+++ b/src/Styles/components/smallcaptor.scss
@@ -3,9 +3,9 @@
     flex-direction: row;
     justify-content: space-between;
     box-shadow: $box-shadow;
-    width: 20%;
+    width: 300px;
     padding: 16px;
-    height: 70px;
+    height: 100px;
     border-radius: 16px;
 
     &__right{
