--- a/src/Styles/main.scss
+++ b/src/Styles/main.scss
@@ -1,6 +1,6 @@
 @import './colors.scss';
 @import url('https://fonts.cdnfonts.com/css/product-sans');
-
+@import "~bootstrap/scss/bootstrap";
 * {
     font-family: 'Product Sans', sans-serif;
 }
@@ -34,11 +34,12 @@ main{
     margin-right: 30px;
     padding-top: 30px;
 }
-@import './components/button.scss';
+
 @import './components/smallcaptor.scss';
 @import './components/circularprogress.scss';
 @import './components/navbar.scss';
 @import './components/text.scss';
 @import './components/img.scss';
 @import './components/badgeData.scss';
-@import './components/form.scss';
+@import './components/datatable.scss';
+
