--- a/src/Styles/components/navbar.scss
+++ b/src/Styles/components/navbar.scss
@@ -1,46 +1,51 @@
 .navbar{
 
     height: 100vh;
-    background-color: $lightgrey;
+    max-height: 100vh;
+    background-color: #F8F9F9;
     width: 250px;
     display: flex;
     flex-direction: column;
     position: fixed;
     align-items: start;
+    justify-content: space-between;
 
-    &>ul{
-        height: 82%;
-        padding: 0;
-        &>li{
-            list-style-type: none;
-            padding-top: 8px;
-            padding-bottom: 8px;
-            padding-left: 34px;
-            
-            &>a{
-                text-decoration: none;
-                font-weight: bold;
-                color: black;
-                padding: 16px;
-                display: block;
-                width: 180px;
-                &>svg{
-                    padding-right: 12px;
-                }
-            }
-        }
-    }
-    
-    &>img{
-        width: 75%;
-        align-self: center;
-        padding-top: 32px;
-        padding-bottom: 32px;
-    }
+   &>div{
+     height: 82%;
+     display: flex;
+     flex-direction: column;
+     &>ul{
+       padding: 0;
+       &>li{
+         list-style-type: none;
+         padding-top: 8px;
+         padding-bottom: 8px;
+         padding-left: 14px;
+
+         &>a{
+           text-decoration: none;
+           font-weight: bold;
+           color: black;
+           padding: 16px;
+           display: block;
+           width: 180px;
+           &>svg{
+             padding-right: 12px;
+           }
+         }
+       }
+     }
+
+     &>img{
+       width: 75%;
+       align-self: center;
+       padding-top: 32px;
+       padding-bottom: 32px;
+     }
+   }
 
     &>a{
-        padding-top: 40px;
-        padding-left: 38px;
+        padding-bottom: 30px;
         text-decoration: none;
         font-weight: bold;
         color: $red;
@@ -54,7 +59,7 @@
 .navbar_dark{
     background-color: $darkblue;
 
-    
+
     &>ul{
         &>li{
             &>a{
@@ -69,5 +74,5 @@
 }
 
 .active{
-    color: $blue !important;
+    color: #036DDF !important;
 }
