--- a/src/Styles/main.scss
+++ b/src/Styles/main.scss
@@ -1,6 +1,6 @@
 @import './colors.scss';
 @import url('https://fonts.cdnfonts.com/css/product-sans');
-@import "~bootstrap/scss/bootstrap";
+@import "../../node_modules/bootstrap/scss/bootstrap";
 * {
     font-family: 'Product Sans', sans-serif;
 }
@@ -9,7 +9,7 @@ p{
     font-size: 16px;
 }
 h1{
-    font-size: 24px;
+    font-size: 24px !important;
 }
 h2{
     font-size: 22px;
@@ -19,20 +19,24 @@ h3{
 }
 body{
     margin: 0;
-    padding: 0; 
+    padding: 0;
     max-width: 100vw;
-
+    height: 100vh;
 }
 #root{
     display: flex;
     flex-direction: row;
-   
+
 }
 main{
     width: 100%;
-    margin-left: 290px;
+    margin-left: 30px;
     margin-right: 30px;
     padding-top: 30px;
+}
+a{
+  cursor: pointer;
+  color: white;
 }
 
 @import './components/smallcaptor.scss';
